--- a/tree-sitter-qc/CMakeLists.txt
+++ b/tree-sitter-qc/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 project(tree-sitter-qc
         VERSION "0.1.0"
         DESCRIPTION "The instructions language for QCSim"
-        HOMEPAGE_URL "https://gitlab.com/noclaps/qcsim"
+        HOMEPAGE_URL "https://github.com/noclaps/qcsim"
         LANGUAGES C)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
