--- a/mise.toml
+++ b/mise.toml
@@ -1,13 +1,12 @@
 [tools]
 bun = "latest"
+go = "latest"
 node = "latest"
-rust = "latest"
 tree-sitter = "latest"
 
-[tasks.build]
-run = ["cargo build -r --workspace", "cp target/release/qcsim ."]
-quiet = true
+[tasks]
+build = ["cd tree-sitter-qc && tree-sitter generate", "go build"]
 
 [tasks.ts-build]
-run = ["tree-sitter generate", "tree-sitter build", "tree-sitter parse ../main.qc"]
+run = ["tree-sitter generate", "tree-sitter parse"]
 dir = "{{ config_root }}/tree-sitter-qc"
