--- a/mise.toml
+++ b/mise.toml
@@ -10,3 +10,7 @@ build = ["cd tree-sitter-qc && tree-sitter generate", "go build"]
 [tasks.ts-build]
 run = ["tree-sitter generate", "tree-sitter parse"]
 dir = "{{ config_root }}/tree-sitter-qc"
+
+[tasks.ts-version]
+run = ["tree-sitter version"]
+dir = "{{ config_root }}/tree-sitter-qc"
