--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,14 @@ jobs:
     name: ${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
     steps:
       - uses: actions/checkout@v4
-      - uses: jdx/mise-action@v2
-      - run: GOOS=${{ matrix.versions.goos }} GOARCH=${{ matrix.versions.goarch }} mise build -o qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+      - uses: tree-sitter/setup-action@v2
+        with:
+          install-lib: false
+      - run: GOOS=${{ matrix.versions.goos }} GOARCH=${{ matrix.versions.goarch }} make
+      - run: mv qcsim qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
       - uses: softprops/action-gh-release@v2
         with:
           files: qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
