--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,18 +7,7 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      fail-fast: false
-      matrix:
-        versions:
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-          - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-    runs-on: ${{ matrix.versions.os }}
-    name: ${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -27,8 +16,11 @@ jobs:
       - uses: tree-sitter/setup-action@v2
         with:
           install-lib: false
-      - run: GOOS=${{ matrix.versions.goos }} GOARCH=${{ matrix.versions.goarch }} make
-      - run: mv qcsim qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
-      - uses: softprops/action-gh-release@v2
+      - run: tree-sitter generate
+        working-directory: tree-sitter-qc
+      - uses: goreleaser/goreleaser-action@v6
         with:
-          files: qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
