chore: Skip validation in workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,6 @@ jobs:
       - uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
-          args: release --clean
+          args: release --clean --skip validation
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
