--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: tree-sitter/setup-action@v2
         with:
           install-lib: false
-      - run: GOOS=${{ matrix.versions.goos }} GOARCH=${{ matrix.versions.goarch }} make
+      - run: GOOS=${{ matrix.versions.goos }} GOARCH=${{ matrix.versions.goarch }} go build
       - run: mv qcsim qcsim-${{ github.ref_name }}-${{ matrix.versions.goos }}-${{ matrix.versions.goarch }}
       - uses: softprops/action-gh-release@v2
         with:
